Add header, main, and footer elements to index.html

--- a/ejemplo1/index.html
+++ b/ejemplo1/index.html
@@ -8,6 +8,14 @@
     <title>Ejemplo 1 - jadg13</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
