Add navigation and grocery list to index.html

--- a/ejemplo1/index.html
+++ b/ejemplo1/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Example 1 in HTML5">
-    <meta name="author" content="José A. Durán G.">    
+    <meta name="author" content="José A. Durán G.">
     <title>Ejemplo 1 - jadg13</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <section>
+            <article>
+                <h1>Soy la lista del super!</h1>
+                <ul>
+                    <li>Frutas</li>
+                    <ol>
+                        <li>Manzana</li>
+                        <li>Platano</li>
+                    </ol>
+                    <li>Carnes</li>
+                    <ol>
+                        <li>Pollo</li>
+                        <li>Res</li>
+                        <li>Carne molina</li>
+                    </ol>
+                    <li>Verduras</li>
+                    <ol>
+                        <li>Lechuga</li>
+                        <li>Tomate</li>
+                        <li>Chile</li>
+                </ul>
 
+            </article>
+        </section>
     </main>
     <footer>
-        
+        <p>Desarrollado por <a href="https://github.com/jadg-13/FrontEnd_Dev1">jadg-13</a></p>
     </footer>
 </body>
+
 </html>
