Update navigation links and add new items

--- a/ejemplo1/index.html
+++ b/ejemplo1/index.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Frutas</a></li>
+                <li><a href="#">Carnes</a></li>
+                <li><a href="#">Verduras</a></li>
             </ul>
         </nav>
     </header>
@@ -28,11 +28,14 @@
                     <ol>
                         <li>Manzana</li>
                         <li>Platano</li>
+                        <li>Uva</li>
+                        <li>Sandilla</li>
                     </ol>
                     <li>Carnes</li>
                     <ol>
                         <li>Pollo</li>
                         <li>Res</li>
+                        <li>Pescado</li>
                         <li>Carne molina</li>
                     </ol>
                     <li>Verduras</li>
@@ -40,6 +43,8 @@
                         <li>Lechuga</li>
                         <li>Tomate</li>
                         <li>Chile</li>
+                        <li>Brocoli</li>
+                        <li>Repollo</li>
                 </ul>
 
             </article>
