Update heading in index.html to reflect the purpose of the list

--- a/ejemplo1/index.html
+++ b/ejemplo1/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <article>
-                <h1>Soy la lista del super!</h1>
+                <h1>Lista de compras del supermercado!</h1>
                 <ul>
                     <li>Frutas</li>
                     <ol>
