[new] Use de autocomplete y require

--- a/formulario2/index.html
+++ b/formulario2/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Calendario">
     <meta name="keywords" content="HTML">
     <meta name="author" content="José A. Durán G.">
-    <title>Document</title>
+    <title>Calendario2 - jadg13</title>
 </head>
 <body>
     <section>
