Add CSS styles and content to index.html

--- a/clase_css/index.html
+++ b/clase_css/index.html
@@ -11,9 +11,26 @@
 </head>
 <body>
     <main>
+        <h1>Uso de css</h1>
+        <img src="./img/logos.png" alt="Logos de CSS y HTML">
+        <h2>Primera forma.</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam dolor vitae, molestias esse laboriosam quasi, expedita sunt labore, officiis facere fuga? Distinctio quidem tenetur, iure deleniti cupiditate perspiciatis voluptas reiciendis?</p>
+        <h2>Segunda forma - usando clase</h2>
         <p class = "txt-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur sit aut nemo pariatur dignissimos quis suscipit labore consequuntur incidunt, ipsam voluptatum eveniet adipisci. Repellat aliquid rerum, ad vero earum provident.</p>
+        <h2>Tercera forma - usando id</h2>
         <p id = "txt-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit facere odio sed, quasi necessitatibus deleniti quod excepturi consequuntur magni? Tempora fugit quisquam dolore nobis quas dolorum aspernatur nisi amet. Assumenda.</p>
+        
+
+        <section id = "card">
+            <h3>Lista de elementos</h3>
+            <ul>
+                <li>Elemento 1</li>
+                <li>Elemento 2</li>
+                <li>Elemento 3</li>
+                <li>Elemento 4</li>
+                <li>Elemento 5</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
